opam-version: "2.0"
name: "Sandmark"
synopsis: "Sandmark benchmark suite"
maintainer: "Shakthi Kannan <author@shakthimaan.com>"
authors: "Shakthi Kannan <author@shakthimaan.com>"
homepage: "https://github.com/ocaml-bench/sandmark"
bug-reports: "https://github.com/ocaml-bench/sandmark/issues"
license: "CC 1.0 Universal"
depends: [
  "alt-ergo" {= "2.4.2"}
  "alt-ergo-lib" {= "2.4.2"}
  "alt-ergo-parsers" {= "2.4.2"}
  "astring" {= "0.8.5"}
  "base64" {= "3.4.0"}
  "base-bytes"
  "base-threads"
  "base-unix"
  "bigstringaf" {= "0.6.1"}
  "camlp-streams" {="5.0"}
  "camlzip"
  "checkseum" {= "0.3.4"}
  "conf-findutils" {= "1"}
  "conf-gmp" {= "1"}
  "conf-m4" {= "1"}
  "conf-perl" {= "1"}
  "conf-pkg-config" {= "1.2"}
  "cppo" {= "1.6.7"}
  "decompress" {= "1.1.0"}
  "devkit"
  "digestif" {= "1.0.0"}
  "extlib" {>= "1.7.1"}
  "extunix" {>= "0.1.4"}
  "fmt" {= "0.9.0"}
  "irmin" {= "3.3.2"}
  "irmin-pack" {= "3.3.2"}
  "irmin-bench" {="3.3.2"}
  "irmin-tezos" {="3.3.2"}
  "libevent" {>= "0.8.0"}
  "logs" {= "0.7.0"}
  "lwt" {= "5.7.0"}
  "lwt_ppx"
  "menhir" {= "20200612"}
  "menhirLib" {= "20200612"}
  "menhirSdk" {= "20200612"}
  "mtime" {= "1.2.0"}
  "num" {= "1.3"}
  "ocaml-config" {= "3"}
  "ocamlgraph" {= "2.0.0"}
  "ocurl" {>= "0.7.2"}
  "pcre2" {>= "8.0.3"}
  "ppxlib"  # {= "0.27.0"}
  "psmt2-frontend" {= "0.4.0"}
  "repr" {= "0.6.0"}
  "rresult" {= "0.6.0"}
  "stdlib-shims" {= "0.1.0"}
  "trace" {>= "0.4"}
  "uri" {= "4.1.0"}
  "yojson" {>= "1.6.0"}
  "zarith" {= "1.10"}
]
